# embers

./: .env.example  .firebaserc  .gcloudignore  .gitignore  README.md  eslint.config.js  firebase.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.setup.ts
data/: verb-hash-table.json
infrastructure/: README.md  cloudbuild-base.yaml  cloudbuild.yaml  service.yaml
infrastructure/gce/: README.md  cloudbuild-gce.yaml
infrastructure/terraform/: .terraform.lock.hcl  artifact_registry.tf  frontend.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
public/: sw.js
server/: Dockerfile  Dockerfile.base  lets.yaml  preflight_check.py  pyproject.toml  requirements-heavy.txt
server/app/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py  model_sync.py  rate_limit.py  schemas.py
server/app/cache/: __init__.py  shape_cache.py
server/app/models/: __init__.py  grounded_sam.py  hunyuan3d.py  partcrafter.py  protocol.py  registry.py  sdxl_turbo.py
server/app/pipeline/: __init__.py  encoding.py  mask_to_faces.py  mesh_renderer.py  point_sampler.py  prompt_templates.py  template_matcher.py
server/app/routes/: cache.py  debug.py  generate.py  health.py  prometheus.py
server/app/services/: __init__.py  metrics.py  pipeline.py
server/scripts/: check_heavy_pins.py  pregenerate_top_50.py  upload_model_weights.py
server/tests/: __init__.py  conftest.py  test_auth.py  test_fallback_trigger.py  test_fallback_validation.py  test_grounded_sam.py  test_health_endpoints.py  test_http_mocking.py  test_hunyuan3d.py  test_integration.py  test_mask_to_faces.py  test_mesh_renderer.py  test_partcrafter.py  test_pipeline.py  test_point_sampler.py  test_prompt_templates.py  test_properties.py  test_schema_factories.py  test_sdxl_turbo.py  test_shape_cache.py  test_snapshots.py  test_template_matcher.py
src/: App.css  App.tsx  index.css  main.tsx
src/__tests__/: A3-TemplateSystem.test.ts  AdverbResolver.test.ts  AudioEngine.pitch.test.ts  AudioEngine.test.ts  AudioUniforms.test.ts  GhostTranscript.test.ts  KeywordClassifier.sentimentOnly.test.ts  KeywordClassifier.test.ts  KeywordShadowing.test.ts  MorphTargets.geometry.test.ts  MorphTargets.test.ts  MotionPlanManager.dispose.test.ts  MotionPlanManager.test.ts  SemanticBackend.complexMode.test.ts  SemanticBackend.test.ts  SemanticBackend.transition.test.ts  SentenceParser.test.ts  Sentiment.advanced.test.ts  Sentiment.test.ts  ServerClient.test.ts  ServerShapeAdapter.edge.test.ts  ServerShapeAdapter.scale.test.ts  ServerShapeAdapter.test.ts  SessionLogger.test.ts  SpeechEngine.test.ts  SplitPhase.test.ts  Tier1Orchestrator.test.ts  TuningConfig.test.ts  TuningPanel.test.tsx  UIOverlay.test.tsx  UniformBridge.emotion.test.ts  UniformBridge.overrides.test.ts  UniformBridge.test.ts  VerbHashTable.test.ts  WebSocketSTTClient.test.ts  WordArousal.test.ts  WorkspaceEngine.test.ts  keywords.test.ts
src/audio/: SERManager.ts  WebSocketSTTClient.ts  audio-uniforms.ts  audio-worklet.d.ts  audio-worklet.ts  ser-worker.ts  stt-capture-worklet.ts  types.ts
src/components/: AnalysisPanel.tsx  Canvas.tsx  GhostTitle.tsx  ReportPage.css  ReportPage.tsx  TuningPanel.tsx  UIOverlay.tsx
src/data/: keywords.ts  sentiment.ts
src/engine/: MorphTargets.ts  ParticleSystem.ts  ServerShapeAdapter.ts  UniformBridge.ts  WorkspaceEngine.ts  particle-system-extensions.ts
src/hooks/: useSingletons.ts  useThreeScene.ts
src/lookup/: adverb-resolver.ts  embedding-fallback.ts  embedding-worker.ts  generate-hash-table.ts  tier1-orchestrator.ts  verb-hash-table.ts
src/nlp/: sentence-parser.ts  sentiment.ts
src/renderer/: types.ts
src/services/: AudioEngine.ts  GhostTranscript.ts  KeywordClassifier.ts  SemanticBackend.ts  ServerClient.ts  SessionLogger.ts  SpeechEngine.ts  TuningConfig.ts
src/shaders/: README.md  motion-plan.glsl  position.frag.glsl  primitives.glsl  render.frag.glsl  render.vert.glsl  velocity.frag.glsl
(+39 files in other folders)
